remove tms net and trim citations

--- a/FJH23.bib
+++ b/FJH23.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Fred J Hickernell at 2021-09-15 12:10:55 -0500 
+%% Created for Fred J Hickernell at 2021-08-30 18:08:59 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -75,23 +75,13 @@
 @string{sub = {\Ignore{u}Manuscripts Under Review}}
 
 
-@manual{NAG24,
-	address = {Oxford},
-	author = {{The Numerical Algorithms Group}},
-	date-added = {2021-09-11 14:54:10 -0500},
-	date-modified = {2021-09-11 14:54:10 -0500},
-	edition = {{M}ark 23},
-	title = {The {NAG} Library},
-	year = {2013}}
-
 @webpage{tfqf2021a,
 	author = {{TF Quant Finance Contributors}},
 	date-added = {2021-08-30 17:58:39 -0500},
 	date-modified = {2021-08-30 18:08:59 -0500},
 	title = {{TF} {Q}uant {F}inance: {T}ensor{F}low based {Q}uant {F}inance Library},
 	url = {https://github.com/google/tf-quant-finance},
-	year = {2021},
-	Bdsk-Url-1 = {https://github.com/google/tf-quant-finance}}
+	year = {2021}}
 
 @webpage{Hig21a,
 	author = {N. Higham},
@@ -129,11 +119,10 @@
 	Bdsk-Url-1 = {https://arxiv.org/pdf/2008.08051.pdf}}
 
 @article{paszke2019pytorch,
-	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and K{\"o}pf, Andreas and  Yang, Edward and  DeVito, Zach and  Raison, Martin and  Tejani, Alykhan and  Chilamkurthy, Sasank and  Steiner, Benoit and  Fang, Lu and  Bai, Junjie and  Chintala, Soumith},
-	date-modified = {2021-09-15 12:10:37 -0500},
+	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
 	journal = {Advances in neural information processing systems},
 	pages = {8026--8037},
-	title = {Py{T}orch: An imperative style, high-performance deep learning library},
+	title = {Pytorch: An imperative style, high-performance deep learning library},
 	volume = {32},
 	year = {2019}}
 
@@ -1827,14 +1816,14 @@
 	year = {2009},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s11784-009-0121-x}}
 
-@manual{NAG27,
+@manual{NAG24,
 	address = {Oxford},
 	author = {{The Numerical Algorithms Group}},
 	date-added = {2015-02-12 19:12:02 +0000},
-	date-modified = {2021-09-11 14:54:30 -0500},
-	edition = {{M}ark 27},
+	date-modified = {2015-02-12 19:12:11 +0000},
+	edition = {{M}ark 23},
 	title = {The {NAG} Library},
-	year = {2021}}
+	year = {2013}}
 
 @manual{Mat10a,
 	address = {Champaign, IL},
