remove tms net and trim citations

--- a/Sobol-Bayes-trimmed-2021.tex
+++ b/Sobol-Bayes-trimmed-2021.tex
@@ -642,7 +642,7 @@ Digital $(t,m, d)$-nets are a special case of $(t,m, d)$-nets, constructed using
 	\begin{align*}
 	\vec{z}_{i\ell} = \mathsf{G}_{\ell} \, \vec{\imath}, \quad \ell = 1, \dots, d, \quad i = 0, 1, \dots \;.
 	\end{align*}
-	The value of $t$ as mentioned in Definition \ref{defn:tmd_net} depends on the choice of $\mathsf{G}_{\ell}$.
+	% The value of $t$ as mentioned in Definition \ref{defn:tmd_net} depends on the choice of $\mathsf{G}_{\ell}$.
 \end{defn}
 
 
